kernel-binary: Require libdw in Factory
Libdw is required for gendwarfksyms

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -79,6 +79,10 @@ BuildRequires:  dwarves >= 1.22
 BuildRequires:  %gcc_package
 # for objtool
 BuildRequires:  libelf-devel
+%if 0%{?suse_version} > 1600
+# for gendwarfksyms
+BuildRequires:  libdw-devel
+%endif
 # required for 50-check-kernel-build-id rpm check
 BuildRequires:  elfutils
 %ifarch %arm
