smb3: fix Open files on server counter going negative (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -59174,6 +59174,7 @@
 	patches.suse/af_unix-Fix-garbage-collector-racing-against-connect.patch
 	patches.suse/net-ena-Set-tx_info-xdpf-value-to-NULL.patch
 	patches.suse/drm-client-Fully-protect-modes-with-dev-mode_config..patch
+	patches.suse/smb3-fix-Open-files-on-server-counter-going-negative.patch
 	patches.suse/netfilter-nft_set_pipapo-do-not-free-live-element.patch
 	patches.suse/fs-9p-only-translate-RWX-permissions-for-plain-9P200.patch
 	patches.suse/HID-intel-ish-hid-ipc-Fix-dev_err-usage-with-uniniti.patch
