--- a/series.conf
+++ b/series.conf
@@ -58796,6 +58796,7 @@
 	patches.suse/HID-bigben-use-spinlock-to-safely-schedule-workers.patch
 	patches.suse/scsi-lpfc-Fix-use-after-free-KFENCE-violation-during-sysfs.patch
 	patches.suse/cifs-prevent-data-race-in-smb2_reconnect-.patch
+	patches.suse/cifs-Check-the-lease-context-if-we-actually-got-a-lease.patch
 	patches.suse/cifs-get-rid-of-dns-resolve-worker.patch
 	patches.suse/cifs-use-tcon-allocation-functions-even-for-dummy-tcon.patch
 	patches.suse/USB-ene_usb6250-Allocate-enough-memory-for-full-obje.patch
