--- a/series.conf
+++ b/series.conf
@@ -10348,6 +10348,7 @@
 	patches.suse/usb-cdc-wdm-avoid-setting-WDM_READ-for-ZLP-s.patch
 	patches.suse/usb-Add-checks-for-snprintf-calls-in-usb_alloc_dev.patch
 	patches.suse/usb-hub-Block-less-in-USB3-link-power-management-LPM.patch
+	patches.suse/usb-hub-verify-device-is-configured-in-usb_device_ma.patch
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
 	patches.suse/usb-common-usb-conn-gpio-use-a-unique-name-for-usb-c.patch
 	patches.suse/usb-potential-integer-overflow-in-usbg_make_tpg.patch
