--- a/series.conf
+++ b/series.conf
@@ -11300,6 +11300,7 @@
 	patches.suse/Documentation-usb-gadget-Wrap-remaining-usage-snippe.patch
 	patches.suse/usb-misc-apple-mfi-fastcharge-Make-power-supply-name.patch
 	patches.suse/usb-core-Add-0x-prefix-to-quirks-debug-output.patch
+	patches.suse/usb-core-Remove-unused-usb_unlink_anchored_urbs.patch
 	patches.suse/usb-core-usb_submit_urb-downgrade-type-check.patch
 	patches.suse/usb-typec-intel_pmc_mux-Defer-probe-if-SCU-IPC-isn-t.patch
 	patches.suse/usb-typec-ucsi-yoga-c630-fix-error-and-remove-paths.patch
