selftests/bpf: Use pid_t consistently in test_progs.c (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35652,6 +35652,7 @@
 	patches.kabi/kabi-hide-new-member-allow_subflows-in-struct-mptcp_.patch
 	patches.kabi/KVM-VMX-Apply-MMIO-Stale-Data-mitigation-if-KVM-maps.patch
 	patches.suse/bpf-Reject-negative-offsets-for-ALU-ops.patch
+	patches.suse/selftests-bpf-Use-pid_t-consistently-in-test_progs.c.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
