--- a/series.conf
+++ b/series.conf
@@ -35653,6 +35653,7 @@
 	patches.kabi/KVM-VMX-Apply-MMIO-Stale-Data-mitigation-if-KVM-maps.patch
 	patches.suse/bpf-Reject-negative-offsets-for-ALU-ops.patch
 	patches.suse/selftests-bpf-Use-pid_t-consistently-in-test_progs.c.patch
+	patches.suse/selftests-bpf-Close-obj-in-error-path-in-xdp_adjust_.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
