selftests/bpf: Close fd in error path in drop_on_reuseport (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35654,6 +35654,7 @@
 	patches.suse/bpf-Reject-negative-offsets-for-ALU-ops.patch
 	patches.suse/selftests-bpf-Use-pid_t-consistently-in-test_progs.c.patch
 	patches.suse/selftests-bpf-Close-obj-in-error-path-in-xdp_adjust_.patch
+	patches.suse/selftests-bpf-Close-fd-in-error-path-in-drop_on_reus.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
