s390/pci: Use pci_uevent_ers() in PCI recovery (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12921,6 +12921,7 @@
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.suse/PCI-ERR-Update-device-error_state-already-after-rese.patch
 	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
+	patches.suse/s390-pci-Use-pci_uevent_ers-in-PCI-recovery.patch
 	patches.suse/PCI-AER-Support-errors-introduced-by-PCIe-r6.0.patch
 	patches.suse/PCI-Disable-MSI-on-RDC-PCI-to-PCIe-bridges.patch
 	patches.suse/PCI-P2PDMA-Fix-incorrect-pointer-usage-in-devm_kfree.patch
