--- a/series.conf
+++ b/series.conf
@@ -11437,6 +11437,7 @@
 	patches.suse/KVM-Conditionally-reschedule-when-resetting-the-dirt.patch
 	patches.suse/KVM-TDX-Use-kvm_arch_vcpu.host_debugctl-to-restore-t.patch
 	patches.suse/KVM-x86-Convert-vcpu_run-s-immediate-exit-param-into.patch
+	patches.suse/KVM-x86-Drop-kvm_x86_ops.set_dr6-in-favor-of-a-new-K.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-SVM-Pass-through-GHCB-MSR-if-and-only-if-VM-is-a.patch
 	patches.suse/KVM-x86-Drop-pending_smi-vs.-INIT_RECEIVED-check-whe.patch
