KVM: nVMX: Check vmcs12->guest_ia32_debugctl on nested VM-Enter (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11440,6 +11440,7 @@
 	patches.suse/KVM-x86-Drop-kvm_x86_ops.set_dr6-in-favor-of-a-new-K.patch
 	patches.suse/KVM-VMX-Allow-guest-to-set-DEBUGCTL.RTM_DEBUG-if-RTM.patch
 	patches.suse/KVM-VMX-Extract-checking-of-guest-s-DEBUGCTL-into-he.patch
+	patches.suse/KVM-nVMX-Check-vmcs12-guest_ia32_debugctl-on-nested-.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-SVM-Pass-through-GHCB-MSR-if-and-only-if-VM-is-a.patch
 	patches.suse/KVM-x86-Drop-pending_smi-vs.-INIT_RECEIVED-check-whe.patch
