--- a/series.conf
+++ b/series.conf
@@ -12970,6 +12970,7 @@
 	patches.suse/KVM-SEV-Read-save-fields-from-GHCB-exactly-once.patch
 	patches.suse/KVM-SEV-Validate-XCR0-provided-by-guest-in-GHCB.patch
 	patches.suse/KVM-x86-Add-helper-to-retrieve-current-value-of-user.patch
+	patches.suse/KVM-SVM-Re-load-current-not-host-TSC_AUX-on-VMEXIT-f.patch
 	patches.suse/KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if-next-R.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 	patches.suse/NFSD-Rework-encoding-and-decoding-of-nfsd4_deviceid.patch
