KVM: SVM: Initialize per-CPU svm_data at the end of hardware setup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13266,6 +13266,7 @@
 	patches.suse/x86-amd_node-Fix-AMD-root-device-caching.patch
 	patches.suse/x86-microcode-AMD-Add-more-known-models-to-entry-sign-chec.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
+	patches.suse/KVM-SVM-Initialize-per-CPU-svm_data-at-the-end-of-ha.patch
 	patches.suse/mm-shmem-fix-THP-allocation-and-fallback-loop.patch
 	patches.suse/mm-mm_init-fix-hash-table-order-logging-in-alloc_lar.patch
 	patches.suse/mm-secretmem-fix-use-after-free-race-in-fault-handle.patch
