--- a/series.conf
+++ b/series.conf
@@ -13267,6 +13267,7 @@
 	patches.suse/x86-microcode-AMD-Add-more-known-models-to-entry-sign-chec.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/KVM-SVM-Initialize-per-CPU-svm_data-at-the-end-of-ha.patch
+	patches.suse/KVM-VMX-Fix-check-for-valid-GVA-on-an-EPT-violation.patch
 	patches.suse/mm-shmem-fix-THP-allocation-and-fallback-loop.patch
 	patches.suse/mm-mm_init-fix-hash-table-order-logging-in-alloc_lar.patch
 	patches.suse/mm-secretmem-fix-use-after-free-race-in-fault-handle.patch
