bpf: Fix test verif_scale_strobemeta_subprogs failure due to llvm19 (bsc#1252368).

--- a/series.conf
+++ b/series.conf
@@ -29762,6 +29762,7 @@
 	patches.suse/bpf-simplify-btf_get_prog_ctx_type-into-btf_is_prog_.patch
 	patches.suse/bpf-handle-bpf_user_pt_regs_t-typedef-explicitly-for.patch
 	patches.suse/bpf-don-t-infer-PTR_TO_CTX-for-programs-with-unnamed.patch
+	patches.suse/bpf-Fix-test-verif_scale_strobemeta_subprogs-failure-due-t.patch
 	patches.suse/bpf-Replace-bpf_lpm_trie_key-0-length-array-with-fle.patch
 	patches.suse/net-adopt-skb_network_offset-and-similar-helpers.patch
 	patches.suse/net-adopt-skb_network_header_len-more-broadly.patch
