usb: core: config: Use USB API functions rather than constants (jsc#PED-14291).

--- a/series.conf
+++ b/series.conf
@@ -10364,6 +10364,7 @@
 	patches.suse/usb-Flush-altsetting-0-endpoints-before-reinitializa.patch
 	patches.suse/usb-cdnsp-Fix-issue-with-detecting-USB-3.2-speed.patch
 	patches.suse/usb-cdnsp-Fix-issue-with-detecting-command-completio.patch
+	patches.suse/usb-core-config-Use-USB-API-functions-rather-than-co.patch
 	patches.suse/usb-misc-onboard_usb_dev-Fix-usb5744-initialization-.patch
 	patches.suse/usb-usbtmc-Fix-read_stb-function-and-get_stb-ioctl.patch
 	patches.suse/usb-usbtmc-Fix-timeout-value-in-get_stb.patch
