--- a/series.conf
+++ b/series.conf
@@ -13054,6 +13054,7 @@
 	patches.suse/usb-gadget-f_hid-Fix-zero-length-packet-transfer.patch
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
 	patches.suse/usb-cdns3-gadget-Use-after-free-during-failed-initia.patch
+	patches.suse/usb-core-Use-le16_to_cpu-to-read-__le16-value-in-usb.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
 	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
