bpf: improve error message for unsupported helper (bsc#1252370).

--- a/series.conf
+++ b/series.conf
@@ -34948,6 +34948,7 @@
 	patches.suse/tools-ynl-don-t-append-doc-of-missing-type-directly-.patch
 	patches.suse/net-give-more-chances-to-rcu-in-netdev_wait_allrefs_.patch
 	patches.suse/ipv6-introduce-dst_rt6_info-helper.patch
+	patches.suse/bpf-improve-error-message-for-unsupported-helper.patch
 	patches.suse/bpf-Mark-bpf-prog-stack-with-kmsan_unposion_memory-i.patch
 	patches.suse/bpf-Avoid-kfree_rcu-under-lock-in-bpf_lpm_trie.patch
 	patches.suse/bpftool-Mount-bpffs-on-provided-dir-instead-of-paren.patch
