usb: core: Add a function to get USB version independent periodic payload (jsc#PED-14291).

--- a/series.conf
+++ b/series.conf
@@ -13057,6 +13057,7 @@
 	patches.suse/usb-core-Use-le16_to_cpu-to-read-__le16-value-in-usb.patch
 	patches.suse/usb-core-Parse-eUSB2-companion-descriptors-for-high-.patch
 	patches.suse/usb-core-eUSB2-companion-descriptor-is-for-isoc-IN-e.patch
+	patches.suse/usb-core-Add-a-function-to-get-USB-version-independe.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
 	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
