--- a/series.conf
+++ b/series.conf
@@ -13058,6 +13058,7 @@
 	patches.suse/usb-core-Parse-eUSB2-companion-descriptors-for-high-.patch
 	patches.suse/usb-core-eUSB2-companion-descriptor-is-for-isoc-IN-e.patch
 	patches.suse/usb-core-Add-a-function-to-get-USB-version-independe.patch
+	patches.suse/usb-core-Introduce-usb_endpoint_is_hs_isoc_double.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
 	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
