serial: tegra-utc: Add driver for Tegra UART Trace Controller (UTC) (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -8359,6 +8359,7 @@
 	patches.suse/staging-vchiq_arm-Fix-possible-NPR-of-keep-alive-thr.patch
 	patches.suse/serial-sh-sci-Update-the-suspend-resume-support.patch
 	patches.suse/Revert-tty-serial-Add-kgdb_nmi-driver.patch
+	patches.suse/serial-tegra-utc-Add-driver-for-Tegra-UART-Trace-Controller-UTC.patch
 	patches.suse/serial-mctrl_gpio-split-disable_ms-into-sync-and-no_.patch
 	patches.suse/tty-n_tty-use-uint-for-space-returned-by-tty_write_r.patch
 	patches.suse/tty-serial-8250-Add-some-more-device-IDs.patch
