config: arm64: Enable Tegra264 UART Trace Controller (jsc#PED-13694)
+CONFIG_SERIAL_TEGRA_UTC=y
+CONFIG_SERIAL_TEGRA_UTC_CONSOLE=y

And add tegra-utc in supported.conf.

Signed-off-by: Stanimir Varbanov <svarbanov@suse.de>

--- a/supported.conf
+++ b/supported.conf
@@ -5286,6 +5286,7 @@
 -!optional			drivers/tty/serial/sprd_serial
 -				drivers/tty/serial/stm32-usart
 				drivers/tty/serial/tegra-tcu
+				drivers/tty/serial/tegra-utc					# jsc#PED-13694
 				drivers/tty/serial/ucc_uart
 -				drivers/tty/serial/xilinx_uartps
 -!optional			drivers/tty/synclink
