--- a/series.conf
+++ b/series.conf
@@ -9553,6 +9553,7 @@
 	patches.suse/ASoC-tegra210_ahub-Add-check-to-of_device_get_match_.patch
 	patches.suse/ASoC-intel-sdw_utils-Assign-initial-value-in-asoc_sd.patch
 	patches.suse/ASoC-amd-yc-Add-quirk-for-Lenovo-Yoga-Pro-7-14ASP9.patch
+	patches.suse/ASoC-tegra-CIF-Add-Tegra264-support.patch
 	patches.suse/ASoC-apple-mca-Constrain-channels-according-to-TDM-m.patch
 	patches.suse/ASoC-qcom-sdm845-Add-error-handling-in-sdm845_slim_s.patch
 	patches.suse/gpiolib-of-Add-polarity-quirk-for-s5m8767.patch
