--- a/series.conf
+++ b/series.conf
@@ -7214,6 +7214,7 @@
 	patches.suse/ASoC-codecs-wcd937x-fix-a-potential-memory-leak-in-w.patch
 	patches.suse/ASoC-mediatek-mt6359-Add-stub-for-mt6359_accdet_enab.patch
 	patches.suse/ASoC-pcm6240-Drop-bogus-code-handling-IRQ-as-GPIO.patch
+	patches.suse/ASoC-tegra210-Convert-to-RUNTIME_PM_OPS-co.patch
 	patches.suse/ASoC-amd-yc-update-quirk-data-for-new-Lenovo-model.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-assignment-on-ASUS.patch
 	patches.suse/ALSA-hda-realtek-Bass-speaker-fixup-for-ASUS-UM5606K.patch
