--- a/series.conf
+++ b/series.conf
@@ -9558,6 +9558,7 @@
 	patches.suse/ASoC-amd-yc-Add-quirk-for-Lenovo-Yoga-Pro-7-14ASP9.patch
 	patches.suse/ASoC-tegra-CIF-Add-Tegra264-support.patch
 	patches.suse/ASoC-tegra-ADMAIF-Add-Tegra264-support.patch
+	patches.suse/ASoC-tegra-Update-PLL-rate-for-Tegra264.patch
 	patches.suse/ASoC-apple-mca-Constrain-channels-according-to-TDM-m.patch
 	patches.suse/ASoC-qcom-sdm845-Add-error-handling-in-sdm845_slim_s.patch
 	patches.suse/gpiolib-of-Add-polarity-quirk-for-s5m8767.patch
