--- a/series.conf
+++ b/series.conf
@@ -9561,6 +9561,7 @@
 	patches.suse/ASoC-tegra-Update-PLL-rate-for-Tegra264.patch
 	patches.suse/ASoC-tegra-I2S-Add-Tegra264-support.patch
 	patches.suse/ASoC-tegra-AMX-Add-Tegra264-support.patch
+	patches.suse/ASoC-tegra-ADX-Add-Tegra264-support.patch
 	patches.suse/ASoC-apple-mca-Constrain-channels-according-to-TDM-m.patch
 	patches.suse/ASoC-qcom-sdm845-Add-error-handling-in-sdm845_slim_s.patch
 	patches.suse/gpiolib-of-Add-polarity-quirk-for-s5m8767.patch
