ASoC: tegra: ASRC: Update ARAM address (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -9558,6 +9558,7 @@
 	patches.suse/ASoC-amd-yc-Add-quirk-for-Lenovo-Yoga-Pro-7-14ASP9.patch
 	patches.suse/ASoC-tegra-CIF-Add-Tegra264-support.patch
 	patches.suse/ASoC-tegra-ADMAIF-Add-Tegra264-support.patch
+	patches.suse/ASoC-tegra-ASRC-Update-ARAM-address.patch
 	patches.suse/ASoC-tegra-Update-PLL-rate-for-Tegra264.patch
 	patches.suse/ASoC-tegra-I2S-Add-Tegra264-support.patch
 	patches.suse/ASoC-tegra-AMX-Add-Tegra264-support.patch
