--- a/series.conf
+++ b/series.conf
@@ -9564,6 +9564,7 @@
 	patches.suse/ASoC-tegra-AMX-Add-Tegra264-support.patch
 	patches.suse/ASoC-tegra-ADX-Add-Tegra264-support.patch
 	patches.suse/ASoC-tegra-AHUB-Add-Tegra264-support.patch
+	patches.suse/ASoC-tegra-Tegra264-support-in-isomgr_bw.patch
 	patches.suse/ASoC-apple-mca-Constrain-channels-according-to-TDM-m.patch
 	patches.suse/ASoC-qcom-sdm845-Add-error-handling-in-sdm845_slim_s.patch
 	patches.suse/gpiolib-of-Add-polarity-quirk-for-s5m8767.patch
