dmaengine: tegra210-adma: Support channel page (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -5590,6 +5590,7 @@
 	patches.suse/dmaengine-idxd-Add-a-new-IAA-device-ID-on-Panther-La.patch
 	patches.suse/dmaengine-idxd-Remove-unused-idxd_-un-register_bus_t.patch
 	patches.suse/dmaengine-ti-edma-fix-OF-node-reference-leaks-in-edm.patch
+	patches.suse/dmaengine-tegra210-adma-Support-channel-page.patch
 	patches.suse/dmaengine-idxd-Add-idxd_pci_probe_alloc-helper.patch
 	patches.suse/dmaengine-idxd-Binding-and-unbinding-IDXD-device-and.patch
 	patches.suse/dmaengine-idxd-Add-idxd_device_config_save-and-idxd_.patch
