dmaengine: tegra210-adma: Use div_u64 for 64 bit division (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -6321,6 +6321,7 @@
 	patches.suse/phy-exynos5-usbdrd-gs101-ensure-power-is-gated-to-SS.patch
 	patches.suse/phy-ti-gmii-sel-Do-not-use-syscon-helper-to-build-re.patch
 	patches.suse/phy-tegra-xusb-reset-VBUS-ID-OVERRIDE.patch
+	patches.suse/dmaengine-tegra210-adma-Use-div_u64-for-64-bit-division.patch
 	patches.suse/Revert-of-reserved-memory-Fix-using-wrong-number-of-.patch
 	patches.suse/x86-microcode-AMD-Remove-ugly-linebreak-in-__verify_patch_.patch
 	patches.suse/x86-microcode-AMD-Remove-unused-save_microcode_in_initrd_a.patch
