--- a/series.conf
+++ b/series.conf
@@ -10295,6 +10295,7 @@
 	patches.suse/phy-rockchip-samsung-hdptx-Do-no-set-rk_hdptx_phy-ra.patch
 	patches.suse/phy-qcom-qmp-usb-Fix-an-NULL-vs-IS_ERR-bug.patch
 	patches.suse/phy-fsl-imx8mq-usb-fix-phy_tx_vboost_level_from_prop.patch
+	patches.suse/dmaengine-tegra210-adma-Add-Tegra264-support.patch
 	patches.suse/dmaengine-xilinx_dma-Set-dma_device-directions.patch
 	patches.suse/dmaengine-idxd-Check-availability-of-workqueue-alloc.patch
 	patches.suse/dmaengine-ti-Add-NULL-check-in-udma_probe.patch
