xe/oa: Fix query mode of operation for OAR/OAC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50850,6 +50850,7 @@
 	patches.suse/drm-amdkfd-Queue-interrupt-work-to-different-CPU.patch
 	patches.suse/Revert-drm-i915-dpt-Make-DPT-object-unshrinkable.patch
 	patches.suse/0001-drm-xe-tracing-Fix-a-potential-TP_printk-UAF.patch
+	patches.suse/xe-oa-Fix-query-mode-of-operation-for-OAR-OAC.patch
 	patches.suse/drm-i915-ddi-change-intel_ddi_init_-dp-hdmi-_connect.patch
 	patches.suse/drm-i915-hdmi-propagate-errors-from-intel_hdmi_init_.patch
 	patches.suse/drm-i915-hdmi-add-error-handling-in-g4x_hdmi_init.patch
