--- a/series.conf
+++ b/series.conf
@@ -58,6 +58,8 @@
 	# sorted patches
 	########################################################
 
+	patches.suse/mm-huge_memory-Fix-initialization-of-huge-zero-folio.patch
+
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
 	########################################################
