--- a/series.conf
+++ b/series.conf
@@ -34934,6 +34934,7 @@
 	patches.suse/nvme-tcp-handle-tls-partially-sent-records-in-write_.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
+	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
 	patches.suse/scsi-libfc-Prevent-integer-overflow-in-fc_fcp_recv_data.patch
 	patches.suse/btrfs-send-fix-duplicated-rmdir-operations-when-usin.patch
 	patches.suse/net-usb-rtl8150-Fix-frame-padding.patch
