--- a/series.conf
+++ b/series.conf
@@ -25621,6 +25621,7 @@
 	patches.suse/serial-imx-Raise-TX-trigger-level-to-8.patch
 	patches.suse/staging-vt6655-Remove-unused-declaration-of-RFbAL723.patch
 	patches.suse/module-don-t-ignore-sysfs_create_link-failures.patch
+	patches.suse/msft-hv-3021-Drivers-hv-vmbus-Add-utility-function-for-querying-r.patch
 	patches.suse/counter-linux-counter.h-fix-Excess-kernel-doc-descri.patch
 	patches.suse/device-property-Add-cleanup.h-based-fwnode_handle_pu.patch
 	patches.suse/iio-core-Leave-private-pointer-NULL-when-no-private-.patch
