HID: uclogic: Fix potential memory leak in error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35039,6 +35039,7 @@
 	patches.suse/HID-quirks-work-around-VID-PID-conflict-for-0x4c4a-0.patch
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
+	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 
 	########################################################
 	# end of sorted patches
