--- a/series.conf
+++ b/series.conf
@@ -35037,6 +35037,7 @@
 	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
 	patches.suse/mtd-onenand-Pass-correct-pointer-to-IRQ-handler.patch
 	patches.suse/HID-quirks-work-around-VID-PID-conflict-for-0x4c4a-0.patch
+	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 
 	########################################################
 	# end of sorted patches
