--- a/series.conf
+++ b/series.conf
@@ -35038,6 +35038,7 @@
 	patches.suse/mtd-onenand-Pass-correct-pointer-to-IRQ-handler.patch
 	patches.suse/HID-quirks-work-around-VID-PID-conflict-for-0x4c4a-0.patch
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
+	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 
 	########################################################
 	# end of sorted patches
