HID: uclogic: Fix potential memory leak in error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13391,6 +13391,7 @@
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
+	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
