--- a/series.conf
+++ b/series.conf
@@ -13388,6 +13388,7 @@
 	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
 	patches.suse/mtd-onenand-Pass-correct-pointer-to-IRQ-handler.patch
 	patches.suse/HID-quirks-work-around-VID-PID-conflict-for-0x4c4a-0.patch
+	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
