HID: hid-ntrig: Prevent memory leak in ntrig_report_version() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13389,6 +13389,7 @@
 	patches.suse/mtd-onenand-Pass-correct-pointer-to-IRQ-handler.patch
 	patches.suse/HID-quirks-work-around-VID-PID-conflict-for-0x4c4a-0.patch
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
+	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
