HID: quirks: work around VID/PID conflict for 0x4c4a/0x4155 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13387,6 +13387,7 @@
 	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
 	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
 	patches.suse/mtd-onenand-Pass-correct-pointer-to-IRQ-handler.patch
+	patches.suse/HID-quirks-work-around-VID-PID-conflict-for-0x4c4a-0.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
