KVM: x86: Don't treat ENTER and LEAVE as branches, because they aren't (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34852,6 +34852,7 @@
 	patches.suse/KVM-SVM-Re-load-current-not-host-TSC_AUX-on-VMEXIT-f.patch
 	patches.suse/KVM-SVM-Emulate-PERF_CNTR_GLOBAL_STATUS_SET-for-Perf.patch
 	patches.suse/KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if-next-R.patch
+	patches.suse/KVM-x86-Don-t-treat-ENTER-and-LEAVE-as-branches-beca.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 	patches.suse/NFSD-Rework-encoding-and-decoding-of-nfsd4_deviceid.patch
 	patches.suse/NFSD-Minor-cleanup-in-layoutcommit-processing.patch
