--- a/series.conf
+++ b/series.conf
@@ -35006,6 +35006,7 @@
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/KVM-VMX-Fix-check-for-valid-GVA-on-an-EPT-violation.patch
+	patches.suse/KVM-SVM-Mark-VMCB_LBR-dirty-when-MSR_IA32_DEBUGCTLMS.patch
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
 	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
