dmaengine: Switch back to struct platform_driver::remove() (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -2322,6 +2322,7 @@
 	patches.suse/vdpa-mlx5-Fix-suboptimal-range-on-iotlb-iteration.patch
 	patches.suse/gpio-zevio-Add-missed-label-initialisation.patch
 	patches.suse/gpio-exar-set-value-when-external-pull-up-or-pull-do.patch
+	patches.suse/dmaengine-Switch-back-to-struct-platform_driver-remove.patch
 	patches.suse/dmaengine-idxd-Move-DSA-IAA-device-IDs-to-IDXD-drive.patch
 	patches.suse/phy-airoha-Fix-REG_CSR_2L_PLL_CMN_RESERVE0-config-in.patch
 	patches.suse/phy-airoha-Fix-REG_PCIE_PMA_TX_RESET-config-in-airoh.patch
