memory: tegra: Add Tegra264 MC and EMC support (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -11441,6 +11441,7 @@
 	patches.suse/reset-brcmstb-Enable-reset-drivers-for-ARCH_BCM2835.patch
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 	patches.suse/firmware-tegra-Fix-IVC-dependency-problems.patch
+	patches.suse/memory-tegra-Add-Tegra264-MC-and-EMC-support.patch
 	patches.suse/memory-mtk-smi-Add-ostd-setting-for-mt8186.patch
 	patches.suse/soc-qcom-mdt_loader-Ensure-we-don-t-read-past-the-EL.patch
 	patches.suse/soc-qcom-mdt_loader-Actually-use-the-e_phoff.patch
