--- a/series.conf
+++ b/series.conf
@@ -10153,6 +10153,7 @@
 	patches.suse/KVM-VMX-Flush-shadow-VMCS-on-emergency-reboot.patch
 	patches.suse/KVM-x86-Revert-kvm_x86_ops.mem_enc_ioctl-back-to-an-.patch
 	patches.suse/KVM-SVM-Fix-SNP-AP-destroy-race-with-VMRUN.patch
+	patches.suse/KVM-x86-Make-kvm_pio_request.linear_rip-a-common-fie.patch
 	patches.suse/arm64-sysreg-Drag-linux-kconfig.h-to-work-around-vdso-buil.patch
 	patches.suse/netfs-Fix-oops-in-write-retry-from-mis-resetting-the-subre.patch
 	patches.suse/gfs2-Don-t-clear-sb-s_fs_info-in-gfs2_sys_fs_add.patch
