--- a/series.conf
+++ b/series.conf
@@ -11443,6 +11443,7 @@
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 	patches.suse/firmware-tegra-Fix-IVC-dependency-problems.patch
 	patches.suse/firmware-tegra-bpmp-Add-support-on-Tegra264.patch
+	patches.suse/firmware-tegra-bpmp-Fix-build-failure-for-tegra264-only-config.patch
 	patches.suse/memory-tegra-Add-Tegra264-MC-and-EMC-support.patch
 	patches.suse/memory-mtk-smi-Add-ostd-setting-for-mt8186.patch
 	patches.suse/soc-qcom-mdt_loader-Ensure-we-don-t-read-past-the-EL.patch
