thermal: int340x: processor_thermal: Platform temperature control documentation (jsc#PED-14227).

--- a/series.conf
+++ b/series.conf
@@ -9553,6 +9553,7 @@
 	patches.suse/ACPI-thermal-Execute-_SCP-before-reading-trip-points.patch
 	patches.suse/thermal-intel-int340x-Add-platform-temperature-contr.patch
 	patches.suse/thermal-intel-int340x-Enable-platform-temperature-co.patch
+	patches.suse/thermal-int340x-processor_thermal-Platform-temperatu.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Fix-debugfs-unregister.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Remove-unused-lvts_deb.patch
 	patches.suse/ACPI-bus-Bail-out-if-acpi_kobj-registration-fails.patch
