--- a/series.conf
+++ b/series.conf
@@ -11234,6 +11234,7 @@
 	patches.suse/thermal-drivers-mediatek-lvts_thermal-Add-mt7988-lvt.patch
 	patches.suse/thermal-sysfs-Return-ENODATA-instead-of-EAGAIN-for-r.patch
 	patches.suse/thermal-intel-int340x-Add-throttling-control-interfa.patch
+	patches.suse/thermal-intel-int340x-Allow-temperature-override.patch
 	patches.suse/ALSA-usb-audio-Fix-code-alignment-in-mixer_quirks.patch
 	patches.suse/ALSA-usb-audio-Avoid-precedence-issues-in-mixer_quir.patch
 	patches.suse/ALSA-usb-audio-Fix-block-comments-in-mixer_quirks.patch
