--- a/series.conf
+++ b/series.conf
@@ -9551,6 +9551,7 @@
 	patches.suse/mmc-Add-quirk-to-disable-DDR50-tuning.patch
 	patches.suse/ACPI-OSI-Stop-advertising-support-for-3.0-_SCP-Exten.patch
 	patches.suse/ACPI-thermal-Execute-_SCP-before-reading-trip-points.patch
+	patches.suse/thermal-intel-int340x-Add-platform-temperature-contr.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Fix-debugfs-unregister.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Remove-unused-lvts_deb.patch
 	patches.suse/ACPI-bus-Bail-out-if-acpi_kobj-registration-fails.patch
