--- a/series.conf
+++ b/series.conf
@@ -10156,6 +10156,7 @@
 	patches.suse/KVM-x86-Make-kvm_pio_request.linear_rip-a-common-fie.patch
 	patches.suse/x86-cpufeatures-Add-CPUID-feature-bit-for-the-Bus-Lo.patch
 	patches.suse/KVM-SVM-Add-architectural-definitions-assets-for-Bus.patch
+	patches.suse/KVM-SVM-Add-support-for-KVM_CAP_X86_BUS_LOCK_EXIT-on.patch
 	patches.suse/arm64-sysreg-Drag-linux-kconfig.h-to-work-around-vdso-buil.patch
 	patches.suse/netfs-Fix-oops-in-write-retry-from-mis-resetting-the-subre.patch
 	patches.suse/gfs2-Don-t-clear-sb-s_fs_info-in-gfs2_sys_fs_add.patch
