--- a/series.conf
+++ b/series.conf
@@ -24258,6 +24258,7 @@
 	patches.suse/fs-udf-fix-OOB-read-in-lengthAllocDescs-handling.patch
 	patches.suse/msft-hv-3336-uio_hv_generic-Let-userspace-take-care-of-interrupt-.patch
 	patches.suse/KVM-arm64-Prevent-access-to-vCPU-events-before-init.patch
+	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
 
 	# out-of-tree patches
 	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
