platform/x86/intel/speed_select_if: Convert PCIBIOS_* return codes to errnos (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35040,6 +35040,7 @@
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
+	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
 
 	########################################################
 	# end of sorted patches
