platform/x86: msi-wmi-platform: Fix typo in WMI GUID (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13393,6 +13393,7 @@
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/platform-x86-msi-wmi-platform-Only-load-on-MSI-devic.patch
+	patches.suse/platform-x86-msi-wmi-platform-Fix-typo-in-WMI-GUID.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
