platform/x86: msi-wmi-platform: Only load on MSI devices (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13392,6 +13392,7 @@
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
+	patches.suse/platform-x86-msi-wmi-platform-Only-load-on-MSI-devic.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
