--- a/series.conf
+++ b/series.conf
@@ -13394,6 +13394,7 @@
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/platform-x86-msi-wmi-platform-Only-load-on-MSI-devic.patch
 	patches.suse/platform-x86-msi-wmi-platform-Fix-typo-in-WMI-GUID.patch
+	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
