--- a/series.conf
+++ b/series.conf
@@ -56127,6 +56127,7 @@
 	patches.suse/scsi-hpsa-Fix-potential-memory-leak-in-hpsa_big_passthru_i.patch
 	patches.suse/scsi-mpt3sas-Fix-crash-in-transport-port-remove-by-using-i.patch
 	patches.suse/vhost-vringh-Modify-the-return-value-check.patch
+	patches.suse/KVM-x86-Have-all-vendor-neutral-sub-configs-depend-o.patch
 	patches.suse/kdb-Replace-deprecated-strcpy-with-memmove-in-vkdb_printf.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
