--- a/series.conf
+++ b/series.conf
@@ -56191,6 +56191,7 @@
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
+	patches.suse/KVM-SEV-Enforce-minimum-GHCB-version-requirement-for.patch
 	patches.suse/KVM-SEV-Rename-kvm_ghcb_get_sw_exit_code-to-kvm_get_.patch
 	patches.suse/KVM-SEV-Read-save-fields-from-GHCB-exactly-once.patch
 	patches.suse/KVM-SEV-Validate-XCR0-provided-by-guest-in-GHCB.patch
