soc/tegra: pmc: Use str_enable_disable-like helpers (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -7606,6 +7606,7 @@
 	patches.suse/soc-mediatek-mtk-mmsys-Fix-MT8188-VDO1-DPI1-output-s.patch
 	patches.suse/soc-mediatek-mt8167-mmsys-Fix-missing-regval-in-all-.patch
 	patches.suse/soc-mediatek-mt8365-mmsys-Fix-routing-table-masks-an.patch
+	patches.suse/soc-tegra-pmc-Use-str_enable_disable-like-helpers.patch
 	patches.suse/soc-samsung-include-linux-array_size.h-where-needed.patch
 	patches.suse/soc-samsung-exynos-chipid-Add-NULL-pointer-check-in-.patch
 	patches.suse/soc-ti-k3-socinfo-Do-not-use-syscon-helper-to-build-.patch
