soc: Switch to irq_domain_create_*() (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -9530,6 +9530,7 @@
 	patches.suse/x86-idle-Remove-MFENCEs-for-X86_BUG_CLFLUSH_MONITOR-in-mwa.patch
 	patches.suse/x86-bugs-Restructure-ITS-mitigation.patch
 	patches.suse/x86-bugs-Fix-spectre_v2-mitigation-default-on-Intel.patch
+	patches.suse/soc-Switch-to-irq_domain_create_.patch
 	patches.suse/platform-msi-Add-msi_remove_device_irq_domain-in-pla.patch
 	patches.suse/EDAC-skx_common-Fix-general-protection-fault.patch
 	patches.suse/x86-sev-Add-SVSM-vTPM-probe-send_command-functions
