soc/tegra: pmc: Add Tegra264 support (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -11443,6 +11443,7 @@
 	patches.suse/firmware-arm_scmi-Convert-to-SYSTEM_SLEEP_PM_OPS.patch
 	patches.suse/reset-brcmstb-Enable-reset-drivers-for-ARCH_BCM2835.patch
 	patches.suse/soc-tegra-Enable-support-for-Tegra264.patch
+	patches.suse/soc-tegra-pmc-Add-Tegra264-support.patch
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 	patches.suse/firmware-tegra-Fix-IVC-dependency-problems.patch
 	patches.suse/firmware-tegra-bpmp-Add-support-on-Tegra264.patch
