soc: Use dev_fwnode() (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -11441,6 +11441,7 @@
 	patches.suse/firmware-arm_scmi-Fix-up-turbo-frequencies-selection.patch
 	patches.suse/firmware-arm_scmi-power_control-Ensure-SCMI_SYSPOWER.patch
 	patches.suse/firmware-arm_scmi-Convert-to-SYSTEM_SLEEP_PM_OPS.patch
+	patches.suse/soc-Use-dev_fwnode.patch
 	patches.suse/reset-brcmstb-Enable-reset-drivers-for-ARCH_BCM2835.patch
 	patches.suse/soc-tegra-Enable-support-for-Tegra264.patch
 	patches.suse/soc-tegra-pmc-Add-Tegra264-support.patch
