soc/tegra: cbb: Change master/slave to initiator/target (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -11447,6 +11447,7 @@
 	patches.suse/soc-tegra-pmc-Add-Tegra264-support.patch
 	patches.suse/soc-tegra-Add-Tegra264-APBMISC-compatible-string.patch
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
+	patches.suse/soc-tegra-cbb-Change-master-slave-to-initiator-target.patch
 	patches.suse/firmware-tegra-Fix-IVC-dependency-problems.patch
 	patches.suse/firmware-tegra-bpmp-Add-support-on-Tegra264.patch
 	patches.suse/firmware-tegra-bpmp-Fix-build-failure-for-tegra264-only-config.patch
