soc/tegra: cbb: Improve handling for per SoC fabric data (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -11449,6 +11449,7 @@
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 	patches.suse/soc-tegra-cbb-Change-master-slave-to-initiator-target.patch
 	patches.suse/soc-tegra-cbb-Make-error-interrupt-enable-and-status-per-SoC.patch
+	patches.suse/soc-tegra-cbb-Improve-handling-for-per-SoC-fabric-data.patch
 	patches.suse/firmware-tegra-Fix-IVC-dependency-problems.patch
 	patches.suse/firmware-tegra-bpmp-Add-support-on-Tegra264.patch
 	patches.suse/firmware-tegra-bpmp-Fix-build-failure-for-tegra264-only-config.patch
