--- a/series.conf
+++ b/series.conf
@@ -11450,6 +11450,7 @@
 	patches.suse/soc-tegra-cbb-Change-master-slave-to-initiator-target.patch
 	patches.suse/soc-tegra-cbb-Make-error-interrupt-enable-and-status-per-SoC.patch
 	patches.suse/soc-tegra-cbb-Improve-handling-for-per-SoC-fabric-data.patch
+	patches.suse/soc-tegra-cbb-Support-HW-lookup-to-get-timed-out-target-address.patch
 	patches.suse/firmware-tegra-Fix-IVC-dependency-problems.patch
 	patches.suse/firmware-tegra-bpmp-Add-support-on-Tegra264.patch
 	patches.suse/firmware-tegra-bpmp-Fix-build-failure-for-tegra264-only-config.patch
