dt-bindings: memory: tegra: Add Tegra264 support (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -11423,6 +11423,7 @@
 	patches.suse/arm64-dts-exynos-gs101-ufs-add-dma-coherent-property.patch
 	patches.suse/arm64-dts-rockchip-fix-endpoint-dtc-warning-for-PX30-ISP.patch
 	patches.suse/arm64-dts-st-fix-timer-used-for-ticks.patch
+	patches.suse/dt-bindings-memory-tegra-Add-Tegra264-support.patch
 	patches.suse/arm64-dts-freescale-imx93-tqma9352-Limit-BUCK2-to-600mV.patch
 	patches.suse/arm64-dts-imx8mm-beacon-Fix-HS400-USDHC-clock-speed.patch
 	patches.suse/arm64-dts-imx8mn-beacon-Fix-HS400-USDHC-clock-speed.patch
