--- a/series.conf
+++ b/series.conf
@@ -11424,6 +11424,7 @@
 	patches.suse/arm64-dts-rockchip-fix-endpoint-dtc-warning-for-PX30-ISP.patch
 	patches.suse/arm64-dts-st-fix-timer-used-for-ticks.patch
 	patches.suse/dt-bindings-memory-tegra-Add-Tegra264-support.patch
+	patches.suse/dt-bindings-Add-Tegra264-clock-and-reset-definitions.patch
 	patches.suse/arm64-dts-freescale-imx93-tqma9352-Limit-BUCK2-to-600mV.patch
 	patches.suse/arm64-dts-imx8mm-beacon-Fix-HS400-USDHC-clock-speed.patch
 	patches.suse/arm64-dts-imx8mn-beacon-Fix-HS400-USDHC-clock-speed.patch
