usb: xhci: tegra: Support USB wakeup function for Tegra234 (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -13219,6 +13219,7 @@
 	patches.suse/usb-core-Add-a-function-to-get-USB-version-independe.patch
 	patches.suse/usb-core-Introduce-usb_endpoint_is_hs_isoc_double.patch
 	patches.suse/usb-core-support-eUSB2-double-bandwidth-large-isoc-U.patch
+	patches.suse/usb-xhci-tegra-Support-USB-wakeup-function-for-Tegra234.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
 	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
