phy: tegra: xusb: Disable periodic tracking on Tegra234 (jsc#PED-13694)

--- a/series.conf
+++ b/series.conf
@@ -11057,6 +11057,7 @@
 	patches.suse/mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/memstick-core-Zero-initialize-id_reg-in-h_memstick_r.patch
 	patches.suse/phy-tegra-xusb-Decouple-CYA_TRK_CODE_UPDATE_ON_IDLE-from-trk_hw_mode.patch
+	patches.suse/phy-tegra-xusb-Disable-periodic-tracking-on-Tegra234.patch
 	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
 	patches.suse/dmaengine-mediatek-Fix-a-flag-reuse-error-in-mtk_cqd.patch
 	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
