--- a/series.conf
+++ b/series.conf
@@ -7196,6 +7196,7 @@
 	patches.suse/ASoC-soc-core-Stop-using-of_property_read_bool-for-n.patch
 	patches.suse/ASoC-codecs-pcm3168a-Allow-for-24-bit-in-provider-mo.patch
 	patches.suse/ASoC-amd-ps-use-macro-for-ACP6.3-pci-revision-id.patch
+	patches.suse/ASoC-tegra-Remove-the-isomgr_bw-APIs-export.patch
 	patches.suse/ASoC-ops-Enforce-platform-maximum-on-initial-value.patch
 	patches.suse/ASoC-tas2764-Power-up-down-amp-on-mute-ops.patch
 	patches.suse/ASoC-tas2764-Mark-SW_RESET-as-volatile.patch
