--- a/series.conf
+++ b/series.conf
@@ -6599,6 +6599,7 @@
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-quirk-for-HP-Pavilion-.patch
 	patches.suse/ASoC-Intel-sof_sdw-Fix-unlikely-uninitialized-variab.patch
 	patches.suse/ASoC-codecs-wsa884x-report-temps-to-hwmon-in-millide.patch
+	patches.suse/ASoC-tegra-Fix-ADX-S24_LE-audio-format.patch
 	patches.suse/ASoC-rt1320-set-wake_capable-0-explicitly.patch
 	patches.suse/ASoC-ops-Consistently-treat-platform_max-as-control-.patch
 	patches.suse/ASoC-cs42l43-Fix-maximum-ADC-Volume.patch
