--- a/series.conf
+++ b/series.conf
@@ -35042,6 +35042,7 @@
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
 	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
+	patches.suse/drm-tegra-Add-call-to-put_pid.patch
 
 	########################################################
 	# end of sorted patches
