drm/tegra: dc: Fix reference leak in tegra_dc_couple() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35041,6 +35041,7 @@
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
+	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
 
 	########################################################
 	# end of sorted patches
