--- a/series.conf
+++ b/series.conf
@@ -35046,6 +35046,7 @@
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
 	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
+	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 
 	########################################################
 	# end of sorted patches
