nouveau/firmware: Add missing kfree() of nvkm_falcon_fw::boot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35044,6 +35044,7 @@
 	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
 	patches.suse/drm-tegra-Add-call-to-put_pid.patch
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
+	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
 
 	########################################################
 	# end of sorted patches
