ata: libata-scsi: Add missing scsi_device_put() in ata_scsi_dev_rescan() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56455,6 +56455,7 @@
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
+	patches.suse/ata-libata-scsi-Add-missing-scsi_device_put-in-ata_s.patch
 
 	########################################################
 	# end of sorted patches
