pinctrl: realtek: Select REGMAP_MMIO for RTD driver (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13409,6 +13409,7 @@
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
 	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
+	patches.suse/pinctrl-realtek-Select-REGMAP_MMIO-for-RTD-driver.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
