--- a/series.conf
+++ b/series.conf
@@ -13412,6 +13412,7 @@
 	patches.suse/pinctrl-realtek-Select-REGMAP_MMIO-for-RTD-driver.patch
 	patches.suse/pinctrl-cirrus-Fix-fwnode-leak-in-cs42l43_pin_probe.patch
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
+	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
