ata: libata-scsi: Add missing scsi_device_put() in ata_scsi_dev_rescan() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13413,6 +13413,7 @@
 	patches.suse/pinctrl-cirrus-Fix-fwnode-leak-in-cs42l43_pin_probe.patch
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
+	patches.suse/ata-libata-scsi-Add-missing-scsi_device_put-in-ata_s.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
