pinctrl: s32cc: fix uninitialized memory in s32_pinctrl_desc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13411,6 +13411,7 @@
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-realtek-Select-REGMAP_MMIO-for-RTD-driver.patch
 	patches.suse/pinctrl-cirrus-Fix-fwnode-leak-in-cs42l43_pin_probe.patch
+	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
