drm/xe: Remove duplicate DRM_EXEC selection from Kconfig (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13408,6 +13408,7 @@
 	patches.suse/drm-tegra-Add-call-to-put_pid.patch
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
 	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
+	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
