--- a/series.conf
+++ b/series.conf
@@ -13404,6 +13404,7 @@
 	patches.suse/platform-x86-msi-wmi-platform-Only-load-on-MSI-devic.patch
 	patches.suse/platform-x86-msi-wmi-platform-Fix-typo-in-WMI-GUID.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
+	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
