--- a/series.conf
+++ b/series.conf
@@ -13410,6 +13410,7 @@
 	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-realtek-Select-REGMAP_MMIO-for-RTD-driver.patch
+	patches.suse/pinctrl-cirrus-Fix-fwnode-leak-in-cs42l43_pin_probe.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
