drm/tegra: Add call to put_pid() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13405,6 +13405,7 @@
 	patches.suse/platform-x86-msi-wmi-platform-Fix-typo-in-WMI-GUID.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
 	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
+	patches.suse/drm-tegra-Add-call-to-put_pid.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
