--- a/series.conf
+++ b/series.conf
@@ -13406,6 +13406,7 @@
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
 	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
 	patches.suse/drm-tegra-Add-call-to-put_pid.patch
+	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
