nouveau/firmware: Add missing kfree() of nvkm_falcon_fw::boot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13407,6 +13407,7 @@
 	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
 	patches.suse/drm-tegra-Add-call-to-put_pid.patch
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
+	patches.suse/nouveau-firmware-Add-missing-kfree-of-nvkm_falcon_fw.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
