--- a/series.conf
+++ b/series.conf
@@ -34874,6 +34874,7 @@
 	patches.suse/misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.suse/crypto-rng-Ensure-set_ent-is-always-present.patch
 	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
+	patches.suse/Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
