Input: imx_sc_key - fix memory corruption on unload (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35049,6 +35049,7 @@
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
+	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 
 	########################################################
 	# end of sorted patches
