--- a/series.conf
+++ b/series.conf
@@ -13414,6 +13414,7 @@
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 	patches.suse/ata-libata-scsi-Add-missing-scsi_device_put-in-ata_s.patch
+	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
