--- a/series.conf
+++ b/series.conf
@@ -73,6 +73,7 @@
 	patches.suse/btrfs-do-not-assume-the-full-page-range-is-not-dirty.patch
 	patches.suse/0001-btrfs-move-the-delalloc-range-bitmap-search-into-ext.patch
 	patches.suse/0002-btrfs-mark-all-dirty-sectors-as-locked-inside-writep.patch
+	patches.suse/btrfs-do-not-clear-read-only-when-adding-sprout-devi.patch
 	patches.suse/0001-btrfs-remove-unused-btrfs_folio_start_writer_lock.patch
 	patches.suse/0002-btrfs-unify-to-use-writer-locks-for-subpage-locking.patch
 	patches.suse/0003-btrfs-rename-btrfs_folio_-set-start-end-_writer_lock.patch
