--- a/series.conf
+++ b/series.conf
@@ -2515,6 +2515,7 @@
 	patches.suse/clk-rp1-Implement-remaining-clock-tree.patch
 	patches.suse/net-cadence-macb-Add-support-for-Raspberry-Pi-RP1-et.patch
 	patches.suse/KVM-SVM-Fix-redundant-updates-of-LBR-MSR-intercepts.patch
+	patches.suse/selftests-mptcp-join-endpoints-longer-timeout.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
