KVM: SVM: Fix redundant updates of LBR MSR intercepts (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -2514,6 +2514,7 @@
 	patches.suse/dt-bindings-clock-rp1-Add-missing-MIPI-DSI-defines.patch
 	patches.suse/clk-rp1-Implement-remaining-clock-tree.patch
 	patches.suse/net-cadence-macb-Add-support-for-Raspberry-Pi-RP1-et.patch
+	patches.suse/KVM-SVM-Fix-redundant-updates-of-LBR-MSR-intercepts.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
