--- a/series.conf
+++ b/series.conf
@@ -56206,6 +56206,7 @@
 	patches.suse/NFSD-Fix-destination-buffer-size-in-nfsd4_ssc_setup_dul.patch
 	patches.suse/nfsd-nfserr_jukebox-in-nlm_fopen-should-lead-to-a-retry.patch
 	patches.suse/btrfs-avoid-potential-out-of-bounds-in-btrfs_encode_.patch
+	patches.suse/msft-hv-3360-hyperv-Remove-the-spurious-null-directive-line.patch
 	patches.suse/arm64-mte-Do-not-flag-the-zero-page-as-PG_mte_tagged.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
