--- a/series.conf
+++ b/series.conf
@@ -54766,6 +54766,7 @@
 	patches.suse/USB-serial-option-add-Telit-Cinterion-FE910C04-ECM-c.patch
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 	patches.suse/msft-hv-3286-Drivers-hv-Select-CONFIG_SYSFB-only-if-EFI-is-enable.patch
+	patches.suse/msft-hv-3287-tools-hv-fcopy-Fix-incorrect-file-path-conversion.patch
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/tracing-Add-down_write-trace_event_sem-when-adding-trace-e.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Remove-newline-char-from.patch
