EDAC/igen6: Add Intel Wildcat Lake SoCs support (jsc#PED-14217).

--- a/series.conf
+++ b/series.conf
@@ -11396,6 +11396,7 @@
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/lpfc-don-t-use-file-f_path.dentry-for-comparisons.patch
 	patches.suse/selftests-tracing-Fix-false-failure-of-subsystem-event-tes.patch
+	patches.suse/EDAC-igen6-Add-Intel-Wildcat-Lake-SoCs-support.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
