x86/cpufeatures: Free up unused feature bits (jsc#PED-13871).

--- a/series.conf
+++ b/series.conf
@@ -4031,6 +4031,7 @@
 	patches.suse/x86-sev-Mark-the-TSC-in-a-secure-TSC-guest-as-reliab.patch
 	patches.suse/x86-tsc-Init-the-TSC-for-Secure-TSC-guests.patch
 	patches.suse/x86-sev-Add-the-Secure-TSC-feature-for-SNP-guests.patch
+	patches.suse/x86-cpufeatures-Free-up-unused-feature-bits.patch
 	patches.suse/x86-cpu-Introduce-new-microcode-matching-helper.patch
 	patches.suse/x86-cpu-Expose-only-stepping-min-max-interface.patch
 	patches.suse/x86-cpu-Replace-PEBS-use-of-x86_cpu_desc-use-with-x86_cpu_.patch
