x86/CPU/AMD: Add X86_FEATURE_ZEN6 (jsc#PED-13871).

--- a/series.conf
+++ b/series.conf
@@ -9271,6 +9271,7 @@
 	patches.suse/drm-xe-Save-the-gt-pointer-in-lrc-and-drop-the-tile.patch
 	patches.suse/i2c-designware-Fix-an-error-handling-path-in-i2c_dw_.patch
 	patches.suse/perf-x86-intel-Fix-segfault-with-PEBS-via-PT-with-sample_f.patch
+	patches.suse/x86-CPU-AMD-Add-X86_FEATURE_ZEN6.patch
 	patches.suse/kernel-fork-only-call-untrack_pfn_clear-on-VMAs-duplicated.patch
 	patches.suse/mm-page_alloc-fix-race-condition-in-unaccepted-memory-hand.patch
 	patches.suse/soundwire-bus-Fix-race-on-the-creation-of-the-IRQ-do.patch
