minixfs: Verify inode mode when loading from disk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34626,6 +34626,7 @@
 	patches.suse/platform-x86-amd-pmc-Add-Stellaris-Slim-Gen6-AMD-to-.patch
 	patches.suse/afs-Fix-potential-null-pointer-dereference-in-afs_put_server.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
+	patches.suse/minixfs-Verify-inode-mode-when-loading-from-disk.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
