--- a/series.conf
+++ b/series.conf
@@ -34627,6 +34627,7 @@
 	patches.suse/afs-Fix-potential-null-pointer-dereference-in-afs_put_server.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/minixfs-Verify-inode-mode-when-loading-from-disk.patch
+	patches.suse/cramfs-Verify-inode-mode-when-loading-from-disk.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
