kernel-binary: Support building gendwarfksyms on SLE/Leap 15

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -79,7 +79,8 @@ BuildRequires:  dwarves >= 1.22
 BuildRequires:  %gcc_package
 # for objtool
 BuildRequires:  libelf-devel
-%if 0%{?suse_version} > 1600
+# part of elfutils not shipped on SLE 12
+%if 0%{?suse_version} >= 1500
 # for gendwarfksyms
 BuildRequires:  libdw-devel
 %endif
