--- a/series.conf
+++ b/series.conf
@@ -351,6 +351,7 @@
 	patches.suse/EDAC-skx_common-Differentiate-memory-error-sources.patch
 	patches.suse/EDAC-skx_common-i10nm-Fix-incorrect-far-memory-error.patch
 	patches.suse/EDAC-igen6-Avoid-segmentation-fault-on-module-unload.patch
+	patches.suse/EDAC-igen6-Add-Intel-Panther-Lake-H-SoCs-support.patch
 	patches.suse/EDAC-bluefield-Fix-potential-integer-overflow.patch
 	patches.suse/tracing-Add-__print_dynamic_array-helper.patch
 	patches.suse/x86-microcode-intel-Remove-unnecessary-cache-writeback-and.patch
