--- a/series.conf
+++ b/series.conf
@@ -12203,6 +12203,7 @@
 	patches.kernel.org/6.12.59-082-bpf-Add-bpf_prog_run_data_pointers.patch
 	patches.kernel.org/6.12.59-083-bpf-account-for-current-allocated-stack-depth.patch
 	patches.kernel.org/6.12.59-084-irqchip-riscv-intc-Add-missing-free-callback-.patch
+	patches.kernel.org/6.12.59-085-wifi-ath11k-Clear-affinity-hint-before-callin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
