--- a/series.conf
+++ b/series.conf
@@ -12186,6 +12186,7 @@
 	patches.kernel.org/6.12.59-065-ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-t.patch
 	patches.kernel.org/6.12.59-066-Bluetooth-L2CAP-export-l2cap_chan_hold-for-mo.patch
 	patches.kernel.org/6.12.59-067-acpi-srat-Fix-incorrect-device-handle-check-f.patch
+	patches.kernel.org/6.12.59-068-regulator-fixed-fix-GPIO-descriptor-leak-on-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
