bpf: Add bpf_prog_run_data_pointers() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12200,6 +12200,7 @@
 	patches.kernel.org/6.12.59-079-NFS-Fix-LTP-test-failures-when-timestamps-are.patch
 	patches.kernel.org/6.12.59-080-ALSA-usb-audio-Fix-NULL-pointer-dereference-i.patch
 	patches.kernel.org/6.12.59-081-acpi-hmat-Fix-lockdep-warning-for-hmem_regist.patch
+	patches.kernel.org/6.12.59-082-bpf-Add-bpf_prog_run_data_pointers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
