KVM: guest_memfd: Remove bindings on memslot deletion when gmem is dying (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12283,6 +12283,7 @@
 	patches.kernel.org/6.12.59-162-mm-percpu-do-not-consider-sleepable-allocatio.patch
 	patches.kernel.org/6.12.59-163-KVM-guest_memfd-Pass-index-not-gfn-to-__kvm_g.patch
 	patches.kernel.org/6.12.59-164-KVM-guest_memfd-Remove-RCU-protected-attribut.patch
+	patches.kernel.org/6.12.59-165-KVM-guest_memfd-Remove-bindings-on-memslot-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
