pnfs: Set transport security policy to RPC_XPRTSEC_NONE unless using TLS (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12192,6 +12192,7 @@
 	patches.kernel.org/6.12.59-071-drm-vmwgfx-Validate-command-header-size-again.patch
 	patches.kernel.org/6.12.59-072-ASoC-tas2781-fix-getting-the-wrong-device-num.patch
 	patches.kernel.org/6.12.59-073-pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connec.patch
+	patches.kernel.org/6.12.59-074-pnfs-Set-transport-security-policy-to-RPC_XPR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
