NFS: Fix LTP test failures when timestamps are delegated (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12197,6 +12197,7 @@
 	patches.kernel.org/6.12.59-076-NFSv2-v3-Fix-error-handling-in-nfs_atomic_ope.patch
 	patches.kernel.org/6.12.59-077-NFS-sysfs-fix-leak-when-nfs_client-kobject-ad.patch
 	patches.kernel.org/6.12.59-078-NFSv4-Fix-an-incorrect-parameter-when-calling.patch
+	patches.kernel.org/6.12.59-079-NFS-Fix-LTP-test-failures-when-timestamps-are.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
