mm/mm_init: fix hash table order logging in alloc_large_system_hash() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12243,6 +12243,7 @@
 	patches.kernel.org/6.12.59-122-selftests-tracing-Run-sample-events-to-clear-.patch
 	patches.kernel.org/6.12.59-123-wifi-mac80211-reject-address-change-while-con.patch
 	patches.kernel.org/6.12.59-124-fs-proc-fix-uaf-in-proc_readdir_de.patch
+	patches.kernel.org/6.12.59-125-mm-mm_init-fix-hash-table-order-logging-in-al.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
