mptcp: fix MSG_PEEK stream corruption (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12277,6 +12277,7 @@
 	patches.kernel.org/6.12.59-156-selftests-mptcp-connect-trunc-read-all-recv-d.patch
 	patches.kernel.org/6.12.59-157-selftests-mptcp-join-userspace-longer-transfe.patch
 	patches.kernel.org/6.12.59-158-selftests-mptcp-join-properly-kill-background.patch
+	patches.kernel.org/6.12.59-159-mptcp-fix-MSG_PEEK-stream-corruption.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
