--- a/series.conf
+++ b/series.conf
@@ -12304,6 +12304,7 @@
 	patches.kernel.org/6.12.59-183-net-netpoll-ensure-skb_pool-list-is-always-in.patch
 	patches.kernel.org/6.12.59-184-proc-proc_maps_open-allow-proc_mem_open-to-re.patch
 	patches.kernel.org/6.12.59-185-Bluetooth-MGMT-fix-crash-in-set_mesh_sync-and.patch
+	patches.kernel.org/6.12.59-186-Linux-6.12.59.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
