--- a/series.conf
+++ b/series.conf
@@ -12284,6 +12284,7 @@
 	patches.kernel.org/6.12.59-163-KVM-guest_memfd-Pass-index-not-gfn-to-__kvm_g.patch
 	patches.kernel.org/6.12.59-164-KVM-guest_memfd-Remove-RCU-protected-attribut.patch
 	patches.kernel.org/6.12.59-165-KVM-guest_memfd-Remove-bindings-on-memslot-de.patch
+	patches.kernel.org/6.12.59-166-net-netpoll-Individualize-the-skb-pool.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
