--- a/series.conf
+++ b/series.conf
@@ -12281,6 +12281,7 @@
 	patches.kernel.org/6.12.59-160-wifi-cfg80211-add-an-hrtimer-based-delayed-wo.patch
 	patches.kernel.org/6.12.59-161-wifi-mac80211-use-wiphy_hrtimer_work-for-csa..patch
 	patches.kernel.org/6.12.59-162-mm-percpu-do-not-consider-sleepable-allocatio.patch
+	patches.kernel.org/6.12.59-163-KVM-guest_memfd-Pass-index-not-gfn-to-__kvm_g.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
