net: phy: micrel: Introduce lanphy_modify_page_reg (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12152,6 +12152,7 @@
 	patches.kernel.org/6.12.59-031-erofs-avoid-infinite-loop-due-to-incomplete-z.patch
 	patches.kernel.org/6.12.59-032-selftests-net-local_termination-Wait-for-inte.patch
 	patches.kernel.org/6.12.59-033-net-fec-correct-rx_bytes-statistic-for-the-ca.patch
+	patches.kernel.org/6.12.59-034-net-phy-micrel-Introduce-lanphy_modify_page_r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
