--- a/series.conf
+++ b/series.conf
@@ -12137,6 +12137,7 @@
 	patches.kernel.org/6.12.59-016-drm-amd-pm-Disable-MCLK-switching-on-SI-at-hi.patch
 	patches.kernel.org/6.12.59-017-drm-amdgpu-hide-VRAM-sysfs-attributes-on-GPUs.patch
 	patches.kernel.org/6.12.59-018-drm-amdgpu-Fix-NULL-pointer-dereference-in-VR.patch
+	patches.kernel.org/6.12.59-019-NFS4-Fix-state-renewals-missing-after-boot.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
