ALSA: hda: Fix missing pointer check in hda_component_manager_init function (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12289,6 +12289,7 @@
 	patches.kernel.org/6.12.59-168-net-netpoll-fix-incorrect-refcount-handling-c.patch
 	patches.kernel.org/6.12.59-169-KVM-VMX-Split-out-guts-of-EPT-violation-to-co.patch
 	patches.kernel.org/6.12.59-170-KVM-VMX-Fix-check-for-valid-GVA-on-an-EPT-vio.patch
+	patches.kernel.org/6.12.59-171-ALSA-hda-Fix-missing-pointer-check-in-hda_com.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
