drm/i915: Avoid lock inversion when pinning to GGTT on CHV/BXT+VTD (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12120,6 +12120,7 @@
 	patches.kernel.org/6.12.58-561-drm-amd-display-Fix-black-screen-with-HDMI-ou.patch
 	patches.kernel.org/6.12.58-562-Linux-6.12.58.patch
 	patches.kernel.org/6.12.59-001-drm-mediatek-Add-pm_runtime-support-for-GCE-p.patch
+	patches.kernel.org/6.12.59-002-drm-i915-Avoid-lock-inversion-when-pinning-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
