virtio-net: fix incorrect flags recording in big mode (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12178,6 +12178,7 @@
 	patches.kernel.org/6.12.59-057-net-mlx5e-Fix-wraparound-in-rate-limiting-for.patch
 	patches.kernel.org/6.12.59-058-net-mlx5e-Fix-potentially-misleading-debug-me.patch
 	patches.kernel.org/6.12.59-059-net_sched-limit-try_bulk_dequeue_skb-batches.patch
+	patches.kernel.org/6.12.59-060-virtio-net-fix-incorrect-flags-recording-in-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
