riscv: acpi: avoid errors caused by probing DT devices when ACPI is used (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12132,6 +12132,7 @@
 	patches.kernel.org/6.12.59-011-compiler_types-Move-unused-static-inline-func.patch
 	patches.kernel.org/6.12.59-012-riscv-Build-loader.bin-exclusively-for-Canaan.patch
 	patches.kernel.org/6.12.59-013-RISC-V-clear-hot-unplugged-cores-from-all-tas.patch
+	patches.kernel.org/6.12.59-014-riscv-acpi-avoid-errors-caused-by-probing-DT-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
