drm/vmwgfx: Validate command header size against SVGA_CMD_MAX_DATASIZE (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12189,6 +12189,7 @@
 	patches.kernel.org/6.12.59-068-regulator-fixed-fix-GPIO-descriptor-leak-on-r.patch
 	patches.kernel.org/6.12.59-069-ASoC-cs4271-Fix-regulator-leak-on-probe-failu.patch
 	patches.kernel.org/6.12.59-070-ASoC-codecs-va-macro-fix-resource-leak-in-pro.patch
+	patches.kernel.org/6.12.59-071-drm-vmwgfx-Validate-command-header-size-again.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
