--- a/series.conf
+++ b/series.conf
@@ -12141,6 +12141,7 @@
 	patches.kernel.org/6.12.59-020-NFS4-Apply-delay_retrans-to-async-operations.patch
 	patches.kernel.org/6.12.59-021-HID-quirks-avoid-Cooler-Master-MM712-dongle-w.patch
 	patches.kernel.org/6.12.59-022-HID-nintendo-Wait-longer-for-initial-probe.patch
+	patches.kernel.org/6.12.59-023-NFS-check-if-suid-sgid-was-cleared-after-a-wr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
